--- a/css/Main.css
+++ b/css/Main.css
@@ -11,6 +11,7 @@ body {
 .wrapper {
     width: 100;
     box-sizing: border-box;
+    
 
 }
 
@@ -19,6 +20,7 @@ h1 {
 }
 
 .card {
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -47,7 +49,12 @@ h1 {
 
 }
 
+.gallery-grid-example .cardex {
+    border: 5px dashed #222;
+    margin: 10px;
+}
 .cardex {
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     justify-content: center;
