--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 
 /* CSS Grid   */
-
 .gallery-grid {
     display: grid;
     gap: 1rem;
@@ -18,6 +17,28 @@
 
 
 }
+.gallery-grid-example {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 300px 350px 300px;
+    grid-gap: 10px;
+    border: 5px solid #222;
+    margin: auto;
+    width: 70%;
+}
+
+.gallery-grid .card:hover {
+    border: 1px solid rgb(231, 231, 231);
+}
+
+.gallery-grid-example div:hover {
+    border: 5px dashed rgb(0, 175, 32);
+}
+
+.gallery-grid-example div:nth-child(4) {
+    border: 5px dashed rgb(106, 5, 201);
+}
+
 /********************************//********************************/
 .horizontal-rectangle {
     grid-column: span 2;
